--- a/index.html
+++ b/index.html
@@ -12,15 +12,44 @@
 </head>
 <body>
     
-    <section class="section1">
+    <section class="display-flex">
         <div class="half-width">
             <h1>Stay Focused on <br><span class="orange-color">Mission 2022</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit ex officiis facere soluta recusandae assumenda, suscipit enim nostrum obcaecati pariatur, velit aut eligendi quibusdam! Vero neque labore repudiandae non!</p><br>
-            <a class="button-style" target="_blank" href="">Explore Now</a><br><br>
+            <a class="button-style" target="_blank" href="https://www.facebook.com/iamshakilahmed.09/">Explore Now</a><br><br>
             <p>Scroll down to explore more about us</p>
         </div>
         <div class="half-width">
             <img src="photos/shakil-bg.png" alt="">
+        </div>
+    </section>
+    <section>
+        <h1 class="section2-h1">My Mission in <span class="orange-color">2022</span></h1>
+        <div class="display-flex">
+            <div id="section2-div1" class="section2-style">
+                <img src="./photos/illustrator-1.png" alt="">
+                <h2>Mission</h2>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+            <div id="section2-div2" class="section2-style">
+                <img src="./photos/illustrator-2.png" alt="">
+                <h2>Mission</h2>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+            <div id="section2-div3" class="section2-style">
+                <img src="./photos/illustrator-3.png" alt="">
+                <h2>Mission</h2>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
         </div>
     </section>
 
