--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <section class="display-flex">
         <div class="half-width">
             <h1>Stay Focused on <br><span class="orange-color">Mission 2022</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit ex officiis facere soluta recusandae assumenda, suscipit enim nostrum obcaecati pariatur, velit aut eligendi quibusdam! Vero neque labore repudiandae non!</p><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit ex officiis facere soluta recusandae assumenda, suscipit enim nostrum obcaecati pariatur, velit aut eligendi quibusdam! Vero neque labore repudiandae non!
+            </p><br>
             <a class="button-style" target="_blank" href="https://www.facebook.com/iamshakilahmed.09/">Explore Now</a><br><br>
             <p>Scroll down to explore more about us</p>
         </div>
@@ -23,7 +24,8 @@
             <img src="photos/shakil-bg.png" alt="">
         </div>
     </section>
-    <section>
+
+    <section id="section2-bg-img">
         <h1 class="section2-h1">My Mission in <span class="orange-color">2022</span></h1>
         <div class="display-flex">
             <div id="section2-div1" class="section2-style">
@@ -32,7 +34,8 @@
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
                     sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                    velit mollit.
+                </p>
             </div>
             <div id="section2-div2" class="section2-style">
                 <img src="./photos/illustrator-2.png" alt="">
@@ -40,7 +43,8 @@
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
                     sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                    velit mollit.
+                </p>
             </div>
             <div id="section2-div3" class="section2-style">
                 <img src="./photos/illustrator-3.png" alt="">
@@ -48,10 +52,46 @@
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
                     sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                    velit mollit.
+                </p>
             </div>
         </div>
     </section>
+
+    <section id="section3-bg-img" class="display-flex">
+        <div class="section3-img half-width">
+            <img src="./photos/coding.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2 class="h2-style">Develop <br> Without Limits</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+                dissentias et cum.
+            </p><br>
+            <a class="button-style" target="_blank" href="">Read the Documentation</a>
+        </div>
+    </section>
+
+    <section class="display-flex">
+        <div class="half-width">
+            <h2 class="h2-style">Know Our<br>Global Community</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+                dissentias et cum.
+            </p><br>
+            <a class="button-style" target="_blank" href="">Read the Documentation</a>
+        </div>
+        <div class="section3-img half-width">
+            <img src="./photos/project.png" alt="">
+        </div>
+    </section>
+
+    <div class="footer">
+        <h2>Mission <span class="orange-color">2022</span></h2>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </div>
 
 </body>
 
