p hero section added

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <title>My Mission</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <section class="display-flex">
         <div class="half-width">
-            <h1>Stay Focused on <br><span class="orange-color">Mission 2022</span></h1>
+            <div class="h1-style">
+                <h1>Stay Focused on</h1>
+                <h1><span class="orange-color">Mission 2022</span></h1>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit ex officiis facere soluta recusandae assumenda, suscipit enim nostrum obcaecati pariatur, velit aut eligendi quibusdam! Vero neque labore repudiandae non!
             </p><br>
             <a class="button-style" target="_blank" href="https://www.facebook.com/iamshakilahmed.09/">Explore Now</a><br><br>
@@ -73,7 +76,7 @@
         </div>
     </section>
 
-    <section class="display-flex">
+    <section id="section4-bg-img" class="display-flex">
         <div class="half-width">
             <h2 class="h2-style">Know Our<br>Global Community</h2>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
@@ -85,6 +88,24 @@
         </div>
         <div class="section3-img half-width">
             <img src="./photos/project.png" alt="">
+        </div>
+    </section>
+
+    <section id="phero-section">
+        <h1 class="section2-h1">Build <span class="orange-color">Corona Application</span></h1>
+        <div class="display-flex">
+            <div class="half-width last-img">
+                <img src="./photos/p-ss.jpg" alt="">
+            </div>
+            <div class="half-width">
+                <h1 class="section2-h1">Stay safe with <br> Go<span class="orange-color">Corona</span></h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, 
+                    at eam falli deterruisset. No duo populo animal noluisse, 
+                    enim deterruisset eos et. An mundi noster pri, ea eos quas 
+                    expetendis scripserit, affert gubergren dissentias et cum.
+                </p><br>
+                <a class="button-style" target="_blank" href="https://web.programming-hero.com/">App Fetures</a>
+            </div>
         </div>
     </section>
 
