--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <h1>Stay Focused on</h1>
                 <h1><span class="orange-color">Mission 2022</span></h1>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit ex officiis facere soluta recusandae assumenda, suscipit enim nostrum obcaecati pariatur, velit aut eligendi quibusdam! Vero neque labore repudiandae non!
+            <p>Hi I am Shakil Ahmed.  Recently I enrolled in the programming hero course. So 2022 is a big challenge for me. I want to be a successful web developer. That's why it's very important for me to keep my focus on these 6 months. Insha Allah, I can and I will.
             </p><br>
             <a class="button-style" target="_blank" href="https://www.facebook.com/iamshakilahmed.09/">Explore Now</a><br><br>
-            <p>Scroll down to explore more about us</p>
+            <p>Scroll down to explore more about me</p>
         </div>
         <div class="half-width">
             <img src="photos/shakil-bg.png" alt="">
@@ -34,15 +34,12 @@
             <div id="section2-div1" class="section2-style">
                 <img src="./photos/illustrator-1.png" alt="">
                 <h2>Mission</h2>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.
+                <p>2022 is a life-changing mission for me.I want to win this mission, and i believe I can if I work hard.
                 </p>
             </div>
             <div id="section2-div2" class="section2-style">
                 <img src="./photos/illustrator-2.png" alt="">
-                <h2>Mission</h2>
+                <h2>Vission</h2>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
                     sint. Velit officia consequat duis enim 
@@ -51,7 +48,7 @@
             </div>
             <div id="section2-div3" class="section2-style">
                 <img src="./photos/illustrator-3.png" alt="">
-                <h2>Mission</h2>
+                <h2>Goals</h2>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
                     sint. Velit officia consequat duis enim 
@@ -91,21 +88,39 @@
         </div>
     </section>
 
-    <section id="phero-section">
-        <h1 class="section2-h1">Build <span class="orange-color">Corona Application</span></h1>
-        <div class="display-flex">
-            <div class="half-width last-img">
-                <img src="./photos/p-ss.jpg" alt="">
-            </div>
-            <div class="half-width">
-                <h1 class="section2-h1">Stay safe with <br> Go<span class="orange-color">Corona</span></h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, 
-                    at eam falli deterruisset. No duo populo animal noluisse, 
-                    enim deterruisset eos et. An mundi noster pri, ea eos quas 
-                    expetendis scripserit, affert gubergren dissentias et cum.
-                </p><br>
-                <a class="button-style" target="_blank" href="https://web.programming-hero.com/">App Fetures</a>
-            </div>
+    <section class="display-flex">
+        <div class="skill-width">
+            <h3 class="orange-color">Skill</h3><hr>
+            <ul class="skill-list-design">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Cooming Soon</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+            </ul>
+        </div>
+        <div class="skill-width">
+            <h3 class="orange-color">Skill</h3><hr>
+            <ul class="skill-list-design">
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+            </ul>
+        </div>
+        <div class="skill-width">
+            <h3 class="orange-color">Skill</h3><hr>
+            <ul class="skill-list-design">
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+                <li>Upcoming</li>
+            </ul>
         </div>
     </section>
 
