--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>My Mission</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Lobster&family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <section class="display-flex">
+    <section class="display-flex justify">
         <div class="half-width">
             <div class="h1-style">
                 <h1>Stay Focused on</h1>
@@ -30,56 +31,44 @@
 
     <section id="section2-bg-img">
         <h1 class="section2-h1">My Mission in <span class="orange-color">2022</span></h1>
-        <div class="display-flex">
+        <div class="display-flex justify">
             <div id="section2-div1" class="section2-style">
                 <img src="./photos/illustrator-1.png" alt="">
                 <h2>Mission</h2>
-                <p>2022 is a life-changing mission for me.I want to win this mission, and i believe I can if I work hard.
+                <p>2022 is a life-changing mission for me.I want to win this mission, and i believe I can if i work realy hard. Everyone please pray for me.
                 </p>
             </div>
             <div id="section2-div2" class="section2-style">
                 <img src="./photos/illustrator-2.png" alt="">
                 <h2>Vission</h2>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.
+                <p>I want to be a good person with a good developer. I know this journey is not easy for me, but I want to win in this journey.
                 </p>
             </div>
             <div id="section2-div3" class="section2-style">
                 <img src="./photos/illustrator-3.png" alt="">
                 <h2>Goals</h2>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.
+                <p>At the end of 2022, I want to see myself as a Perfect full stack developer. This Is My Goal. Pray for me.
                 </p>
             </div>
         </div>
     </section>
 
-    <section id="section3-bg-img" class="display-flex">
+    <section id="section3-bg-img" class="display-flex justify">
         <div class="section3-img half-width">
             <img src="./photos/coding.png" alt="">
         </div>
         <div class="half-width">
             <h2 class="h2-style">Develop <br> Without Limits</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
-                dissentias et cum.
+            <p>I will do what I need to do to make myself a good developer. I know that the harder I work, the better I will be able to develop myself. I will give more time than necessary. I have to be a good developer
             </p><br>
             <a class="button-style" target="_blank" href="">Read the Documentation</a>
         </div>
     </section>
 
-    <section id="section4-bg-img" class="display-flex">
+    <section id="section4-bg-img" class="display-flex justify">
         <div class="half-width">
-            <h2 class="h2-style">Know Our<br>Global Community</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
-                dissentias et cum.
+            <h2 class="h2-style">Know Our<br>P-Hero Community</h2>
+            <p>The programming hero community is the best community I've ever seen. All the brothers here are very helpful, <br> and <b> "Jhankar Mahbub" </b> sir, he is an awesome man. I like his style of explaining a lot. Long live the programming hero.
             </p><br>
             <a class="button-style" target="_blank" href="">Read the Documentation</a>
         </div>
@@ -101,7 +90,7 @@
             </ul>
         </div>
         <div class="skill-width">
-            <h3 class="orange-color">Skill</h3><hr>
+            <h3 class="orange-color">Services</h3><hr>
             <ul class="skill-list-design">
                 <li>Upcoming</li>
                 <li>Upcoming</li>
@@ -112,7 +101,7 @@
             </ul>
         </div>
         <div class="skill-width">
-            <h3 class="orange-color">Skill</h3><hr>
+            <h3 class="orange-color">Projects</h3><hr>
             <ul class="skill-list-design">
                 <li>Upcoming</li>
                 <li>Upcoming</li>
@@ -123,9 +112,30 @@
             </ul>
         </div>
     </section>
+    <section>
+        <h3>Contact <span class="orange-color">Me</span></h3>
+        <p id="text-center">We Provide High Standar Clean Website For Your Busness</p>
+        <div class="display-flex">
+            <div class="contact-area">
+                <i class="fas fa-mobile-alt icon-size"></i>
+                <p class="font-size">Call Me On</p>
+                <p>01877018851</p>
+            </div>
+            <div class="contact-area">
+                <i class="far fa-envelope icon-size"></i>
+                <p class="font-size">Email ME At</p>
+                <p>shakilahmed.pure@gmail.com</p>
+            </div>
+            <div class="contact-area">
+                <i class="far fa-building icon-size"></i>
+                <p class="font-size">Visit Office</p>
+                <p>Dhaka 1216, Section 13</p>
+            </div>
+        </div>
+    </section>
 
     <div class="footer">
-        <h2>Mission <span class="orange-color">2022</span></h2>
+        <h2><span id="footer-font-style">Mission <span class="orange-color">2022</span></span></h2>
         <p>Hard work, Perseverance, and Determination for 2022</p>
     </div>
 
